# arm-tests

./: .gitignore  CMakeLists.txt  README.md  dot_prod.c  dot_prod_12.c  run_types.sh
